# the-sqisign

./: .astylerc  .clang-format  .dir-locals.el  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  DEVELOPERS.md  Doxyfile  Doxyfile-internal  NOTICE  README.md
apps/: CMakeLists.txt  PQCgenKAT_sign.c  PQCgenKAT_sign_pqm4.c  benchmark.c  example_nistapi.c  fuzz_sign.c  fuzz_verify.c
src/: CMakeLists.txt  sqisign.c
src/common/: CMakeLists.txt
src/common/arm64crypto/: CMakeLists.txt  randombytes_ctrdrbg.c  randombytes_ctrdrbg_inline_asm.c
src/common/broadwell/: CMakeLists.txt  aes_ni.c  ctr_drbg.c  vaes256_key_expansion.S
src/common/broadwell/include/: aes_ni.h  ctr_drbg.h
src/common/generic/: CMakeLists.txt  aes_c.c  fips202.c  mem.c  randombytes_ctrdrbg.c  randombytes_system.c
src/common/generic/include/: aes.h  bench.h  bench_test_arguments.h  fips202.h  tutil.h
src/common/generic/test/: bench_ctrdrbg.c  test_ctrdrbg.c
src/common/ref/: CMakeLists.txt
src/ec/ref/: CMakeLists.txt  lvlx.cmake  lvlx_test.cmake
src/ec/ref/ecx/: basis.c  ec.c  fp2-test.c  isog_chains.c  kps.c  poly-mul.c  poly-redc.c  tedwards.c  xeval.c  xisog.c
src/ec/ref/ecx/test/: ec-test.c  fp2-test.c  isog-test.c  mont-test.c  poly-mul-test.c  poly-redc-test.c  test_extras.c  test_extras.h  velu-test.c
src/ec/ref/include/: curve_extras.h  ec.h  isog.h  poly.h  sdacs.h  tedwards.h
src/ec/ref/lvl1/: CMakeLists.txt
src/ec/ref/lvl1/test/: ec-tests.h  test-basis.h
src/ec/ref/lvl3/test/: CMakeLists.txt  ec-tests.h  test-basis.h
src/ec/ref/lvl5/test/: CMakeLists.txt  ec-tests.h  test-basis.h
src/ec/ref/lvlx/test/: basis-gen-bench.c  basis-gen-test.c  biextension-bench.c  biextension-test.c  curve-arith-bench.c  curve-arith-test.c  test_extras.c  test_extras.h
src/gf/: CMakeLists.txt
src/gf/broadwell/: CMakeLists.txt  lvlx_test.cmake
src/gf/broadwell/lvl1/: CMakeLists.txt  Makefile  fp.c  fp2.c  fp_asm.S  gf5248.c
src/gf/broadwell/lvl1/include/: fp.h  gf5248.h
src/gf/broadwell/lvl1/test/: test_fp.c
src/gf/broadwell/lvl3/: CMakeLists.txt  gf65376.c
src/gf/broadwell/lvl3/include/: fp.h  gf65376.h
src/gf/broadwell/lvl5/: CMakeLists.txt  gf27500.c
src/gf/broadwell/lvl5/include/: fp.h  gf27500.h
src/gf/gfx/test/: bench_fp.c  bench_fp2.c  test_fp.c  test_fp2.c  test_utils.c  test_utils.h
src/gf/ref/: lvlx.cmake  lvlx_test.cmake
src/gf/ref/lvl1/: CMakeLists.txt  Makefile  fp.c  fp2.c  fp_p1913.c  fp_p1913_32.c  fp_p1913_64.c  fp_p3923.c  fp_p3923_32.c  fp_p3923_64.c  fp_p5248_32.c  fp_p5248_64.c
src/gf/ref/lvl1/include/: fp.h  fp2.h
src/gf/ref/lvl1/test/: test_extras.c  test_extras.h  test_fp.c  test_fp2.c
src/gf/ref/lvl3/: CMakeLists.txt  Makefile  fp.c  fp2.c  fp_p47441.c  fp_p47441_32.c  fp_p47441_64.c  fp_p65376_32.c  fp_p65376_64.c
src/gf/ref/lvl5/: CMakeLists.txt  Makefile  fp.c  fp2.c  fp_p27500_32.c  fp_p27500_64.c  fp_p318233.c  fp_p318233_32.c  fp_p318233_64.c
src/gf/ref/lvl5/include/: fp2.h
src/gf/ref/lvl5/test/: CMakeLists.txt  test_extras.c  test_extras.h  test_fp.c  test_fp2.c
src/hd/ref/: lvlx.cmake
src/id2iso/ref/: CMakeLists.txt  lvlx_test.cmake
src/id2iso/ref/id2isox/: id2iso.c
src/id2iso/ref/id2isox/test/: id2iso.c  id2iso_tests.h  id2ker_even.c  id2ker_odd.c  ker2id.c  test_id2iso.c
src/id2iso/ref/include/: id2iso.h
src/id2iso/ref/lvl5/: CMakeLists.txt
src/id2iso/ref/lvl5/test/: CMakeLists.txt
src/id2iso/ref/lvlx/test/: dim2id2iso_tests.h  id2iso_tests.h  ker2id.c  represent_integer_benchmarks.c  test_dim2id2iso.c  test_id2iso.c
src/intbig/ref/generic/: CMakeLists.txt  intbig.c
src/intbig/ref/generic/include/: intbig.h
src/intbig/ref/generic/test/: CMakeLists.txt  test_intbig.c
src/klpt/ref/: CMakeLists.txt
src/klpt/ref/include/: klpt.h
src/klpt/ref/klptx/: eichler.c  equiv.c  klpt.c  tools.c  tools.h
src/klpt/ref/klptx/test/: eichler.c  equiv.c  klpt.c  klpt_tests.h  test_klpt.c  tools.c
src/klpt/ref/lvl3/: CMakeLists.txt
src/klpt/ref/lvl3/test/: CMakeLists.txt
src/mini-gmp/: gmp.h  mini-gmp-extra.c  mini-gmp-extra.h  mini-gmp.h
src/mp/ref/generic/: CMakeLists.txt
src/nistapi/lvl1/: api.h
src/nistapi/lvl3/: api.h
src/nistapi/lvl5/: api.c  api.h
src/precomp/ref/: CMakeLists.txt  lvlx.cmake
src/precomp/ref/lvl1/: CMakeLists.txt  endomorphism_action.c  quaternion_data.c  sqisign_parameters.txt  torsion_constants.c
src/precomp/ref/lvl1/include/: ec_params.h  encoded_sizes.h  fp_constants.h  klpt_constants.h  torsion_constants.h
src/precomp/ref/lvl3/: CMakeLists.txt  endomorphism_action.c  klpt_constants.c  quaternion_data.c  sqisign_parameters.txt  torsion_constants.c
src/precomp/ref/lvl3/include/: ec_params.h  encoded_sizes.h  fp_constants.h  klpt_constants.h  torsion_constants.h
src/precomp/ref/lvl5/: CMakeLists.txt  endomorphism_action.c  quaternion_data.c  sqisign_parameters.txt  torsion_constants.c
src/precomp/ref/lvl5/include/: ec_params.h  encoded_sizes.h  endomorphism_action.h  fp_constants.h  klpt_constants.h  quaternion_data.h  torsion_constants.h
src/protocols/ref/: CMakeLists.txt
src/protocols/ref/include/: protocols.h
src/protocols/ref/lvl1/test/: CMakeLists.txt
src/protocols/ref/lvl5/: CMakeLists.txt
src/protocols/ref/protocolsx/: encode.c  keygen.c  sign.c  verif.c
src/protocols/ref/protocolsx/test/: challenge.c  commitment.c  encode.c  keygen.c  test_protocols.c  test_protocols.h  verif.c
src/quaternion/ref/generic/: CMakeLists.txt  algebra.c  dim2.c  dim4.c  finit.c  ideal.c  integers.c  internal.h  lattice.c  lll.c  matkermod.c  printer.c
src/quaternion/ref/generic/hnf/: hnf_tests.c
src/quaternion/ref/generic/include/: quaternion.h
src/quaternion/ref/generic/internal_quaternion_headers/: quaternion_tests.h
src/quaternion/ref/generic/lll/: lll_benchmarks.c  lll_tests.c  lll_verification.c
src/quaternion/ref/generic/test/: CMakeLists.txt  algebra.c  dim2.c  dim4.c  (+13 more)
src/signature/ref/: CMakeLists.txt  lvlx.cmake  lvlx_test.cmake
src/verification/ref/: lvlx.cmake
test/: CMakeLists.txt  bench.c  test_kat.c  test_sqisign.c  test_sqisign_prof.c
(+57 files in other folders)
