
set(SOURCE_FILES_PROTOCOLS_GENERIC_REF
    ${PROTOCOLSX_DIR}/sign.c 
    ${PROTOCOLSX_DIR}/verif.c
    ${PROTOCOLSX_DIR}/keygen.c
    ${PROTOCOLSX_DIR}/encode.c
)

add_library(${LIB_PROTOCOLS_${SVARIANT_UPPER}} ${SOURCE_FILES_PROTOCOLS_GENERIC_REF})
target_include_directories(${LIB_PROTOCOLS_${SVARIANT_UPPER}} PRIVATE common ${INC_PUBLIC} ${INC_INTBIG} ${INC_PRECOMP_${SVARIANT_UPPER}} ${INC_QUATERNION} ${INC_KLPT} ${INC_GF_${SVARIANT_UPPER}} ${INC_EC} ${INC_ID2ISO} ${INC_PROTOCOLS} ${INC_COMMON})
target_compile_options(${LIB_PROTOCOLS_${SVARIANT_UPPER}} PRIVATE ${C_OPT_FLAGS})

add_subdirectory(test)
